Fixed nav spacing, no dropdown!

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background-color: white;
+  background-color: gray;
 }
 
 .container {
@@ -11,24 +11,16 @@ body {
   padding: 40px;
 }
 
-/* NAVIGATION */
-header {
-    list-style-type: none;
-    border-bottom: 1px solid white;
-    font-family: Georgia, serif;
-}
-
 .kt a{
     font-size: 32px;
     text-decoration: none;
     color: #669999;
 
 }
-
 /* Space between menu items */
 .menu-item {
     display: inline-block;
-    min-width: 4em;
+    min-width: 8em;
     text-align: center;
 }
 
@@ -41,7 +33,7 @@ header {
 }
 .link:hover {
     font-style: italic;
-    color: #669999;
+    color: pink;
 }
 
 /* Dropdown */
@@ -52,13 +44,16 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
+    min-width: 200px;
+    margin: 0;
     background-color: lightgray;
+    z-index: 1;
 }
 
 .dropdown-content a {
     color: gray;
-    text-align: center;
-    display: inline-block;
+    text-align: left;
+    display: block;
 }
 .dropdown:hover .dropdown-content {
     display: block;
@@ -69,12 +64,11 @@ li.dropdown {
     text-align: left;
     margin: 0;
     padding: 12px 16px;
-    min-width: 4em;
+    min-width: 7em;
 }
 .dropdown-item:hover, .dropdown-item:hover a {
     color: white;
-    background-color: #669999;
-}
+    background-color: pink;
 /* end NAVIGATION */
 
 /* GENERAL */
